--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "react-redux": "^7.2.8",
-    "react-scripts": "5.0.0"
+    "react-scripts": "5.0.0",
+    "redux-create-reducer": "^2.0.1"
   },
   "scripts": {
     "start": "react-scripts start",
