--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "react-dom": "^18.0.0",
     "react-redux": "^7.2.8",
     "react-scripts": "5.0.0",
+    "react-uuid": "^1.0.2",
     "redux-create-reducer": "^2.0.1"
   },
   "scripts": {
